--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -11,7 +11,7 @@ units=system exec strings \
       dos crt objects printer \
       objpas macpas matrix \
       heaptrc lineinfo getopts graph \
-      sysutils math typinfo
+      sysutils math typinfo ctypes
 rsts=math
 
 [require]
@@ -152,9 +152,15 @@ getopts$(PPUEXT) : $(INC)/getopts.pp strings$(PPUEXT) system$(PPUEXT)
 heaptrc$(PPUEXT) : $(INC)/heaptrc.pp system$(PPUEXT)
         $(COMPILER) $(INC)/heaptrc.pp $(REDIR)
 
+ctypes$(PPUEXT) : $(INC)/ctypes.pp system$(PPUEXT)
+        $(COMPILER) $(INC)/ctypes.pp $(REDIR)
+
 #
 # $Log$
-# Revision 1.10  2004-10-30 12:36:48  peter
+# Revision 1.11  2005-01-10 20:32:34  hajny
+#   + ctypes added
+#
+# Revision 1.10  2004/10/30 12:36:48  peter
 #   * units are now created in separate directory units/cpu-os/
 #   * distclean uses cleanall rule and removes units dir
 #   * cross compile support fixed, it is now possible to cycle a ppcsparc
