--- a/rtl/go32v2/Makefile.fpc
+++ b/rtl/go32v2/Makefile.fpc
@@ -14,7 +14,7 @@ units=system objpas macpas strings \
       cpu mmx ucomplex getopts heaptrc lineinfo \
       msmouse charset varutils \
       video mouse keyboard variants vesamode types \
-      sysconst rtlconst dateutil convutil strutils
+      sysconst rtlconst dateutil convutil strutils ctypes
 rsts=math varutils typinfo classes variants dateutil sysconst
 
 [require]
@@ -219,4 +219,4 @@ ucomplex$(PPUEXT) : $(INC)/ucomplex.pp math$(PPUEXT) system$(PPUEXT)
 
 msmouse$(PPUEXT) : msmouse.pp system$(PPUEXT)
 
-callspec$(PPUEXT) : $(INC)/callspec.pp system$(PPUEXT)
+ctypes$(PPUEXT) : $(INC)/ctypes.pp system$(PPUEXT)
