* use cpu-os style

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -162,13 +162,13 @@ ifneq ($(FPCPROG),)
 FPCPROG:=$(firstword $(FPCPROG))
 FPC:=$(shell $(FPCPROG) -PB)
 # Older fpc executables didn't support it and return
-# Error: Illegal processor... When found then fallback to ppc386
+# Error: Illegal processor... If found then fallback to ppc386
 ifneq ($(findstring Error,$(FPC)),)
-override FPC=ppc386
+override FPC=$(firstword $(strip $(wildcard $(addsuffix /ppc386$(SRCEXEEXT),$(SEARCHPATH)))))
 endif
 else
 # fpc binary not found, fallback to ppc386
-override FPC=ppc386
+override FPC=$(firstword $(strip $(wildcard $(addsuffix /ppc386$(SRCEXEEXT),$(SEARCHPATH)))))
 endif
 endif
 
@@ -176,11 +176,20 @@ endif
 override FPC:=$(subst $(SRCEXEEXT),,$(FPC))
 override FPC:=$(subst \,/,$(FPC))$(SRCEXEEXT)
 
-# FPC version
-ifndef FPC_VERSION
+# Try to find the binary, if not found give an error
+FOUNDFPC:=$(strip $(wildcard $(FPC)))
+ifeq ($(FOUNDFPC),)
+$(error Compiler $(FPC) not found)
+endif
+
 # For 1.1 and up we can use a single compiler call to retrieve
 # all needed information
+ifndef FPC_COMPILERINFO
 FPC_COMPILERINFO:=$(shell $(FPC) -iVSPTPSOTO)
+endif
+
+# FPC version
+ifndef FPC_VERSION
 FPC_VERSION:=$(word 1,$(FPC_COMPILERINFO))
 endif
 
@@ -226,15 +235,17 @@ endif
 ifndef OS_TARGET
 OS_TARGET:=$(word 5,$(FPC_COMPILERINFO))
 endif
+FULL_TARGET=$(CPU_TARGET)-$(OS_TARGET)
+FULL_SOURCE=$(CPU_SOURCE)-$(OS_SOURCE)
 
 # Full name of the target, including CPU and OS. For OSs limited
 # to 8.3 we only use the target OS
 ifneq ($(findstring $(OS_SOURCE),$(LIMIT83fs)),)
-FULL_TARGET=$(OS_TARGET)
-FULL_SOURCE=$(OS_SOURCE)
+TARGETSUFFIX=$(OS_TARGET)
+SOURCESUFFIX=$(OS_SOURCE)
 else
-FULL_TARGET=$(CPU_TARGET)-$(OS_TARGET)
-FULL_SOURCE=$(CPU_SOURCE)-$(OS_SOURCE)
+TARGETSUFFIX=$(FULL_TARGET)
+SOURCESUFFIX=$(FULL_SOURCE)
 endif
 
 # Cross compile flag
@@ -245,8 +256,8 @@ endif
 # Check if the Makefile supports this target, but not
 # when the make target is to rebuild the makefile
 ifeq ($(findstring makefile,$(MAKECMDGOALS)),)
-ifeq ($(findstring $(OS_TARGET),$(MAKEFILETARGETS)),)
-$(error The Makefile doesn't support target $(OS_TARGET), please run fpcmake first)
+ifeq ($(findstring $(FULL_TARGET),$(MAKEFILETARGETS)),)
+$(error The Makefile doesn't support target $(FULL_TARGET), please run fpcmake first)
 endif
 endif
 
@@ -261,7 +272,7 @@ ifeq ($(OS_TARGET),linux)
 linuxHier=1
 endif
 
-export OS_TARGET OS_SOURCE CPU_TARGET CPU_SOURCE FULL_TARGET FULL_SOURCE CROSSCOMPILE
+export OS_TARGET OS_SOURCE CPU_TARGET CPU_SOURCE FULL_TARGET FULL_SOURCE TARGETSUFFIX SOURCESUFFIX CROSSCOMPILE
 
 
 [fpcdircheckenv]
@@ -314,7 +325,7 @@ endif
 
 # Cross binaries dir
 ifndef CROSSBINDIR
-CROSSBINDIR:=$(wildcard $(FPCDIR)/bin/$(FULL_TARGET))
+CROSSBINDIR:=$(wildcard $(FPCDIR)/bin/$(TARGETSUFFIX))
 endif
 
 # Default binutils prefix for cross compile when the
@@ -329,7 +340,7 @@ endif
 
 # Try first the full target name, otherwise try only
 # the OS for backwards compatibility
-UNITSDIR:=$(wildcard $(FPCDIR)/units/$(FULL_TARGET))
+UNITSDIR:=$(wildcard $(FPCDIR)/units/$(TARGETSUFFIX))
 ifeq ($(UNITSDIR),)
 UNITSDIR:=$(wildcard $(FPCDIR)/units/$(OS_TARGET))
 endif
@@ -475,9 +486,9 @@ export DIST_DESTDIR
 # EXE/PPU Target directories
 ifndef COMPILER_UNITTARGETDIR
 ifdef PACKAGEDIR_MAIN
-COMPILER_UNITTARGETDIR=$(PACKAGEDIR_MAIN)/units/$(FULL_TARGET)
+COMPILER_UNITTARGETDIR=$(PACKAGEDIR_MAIN)/units/$(TARGETSUFFIX)
 else
-COMPILER_UNITTARGETDIR=units/$(FULL_TARGET)
+COMPILER_UNITTARGETDIR=units/$(TARGETSUFFIX)
 endif
 endif
 ifndef COMPILER_TARGETDIR
@@ -512,12 +523,12 @@ INSTALL_BINDIR:=$(INSTALL_BASEDIR)/bin
 ifdef INSTALL_FPCPACKAGE
 ifdef CROSSCOMPILE
 ifdef CROSSINSTALL
-INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(FULL_SOURCE)
+INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(SOURCESUFFIX)
 else
-INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(FULL_TARGET)
+INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(TARGETSUFFIX)
 endif
 else
-INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(FULL_TARGET)
+INSTALL_BINDIR:=$(INSTALL_BINDIR)/$(TARGETSUFFIX)
 endif
 endif
 endif
@@ -525,7 +536,7 @@ endif
 
 # set the directory where to install the units.
 ifndef INSTALL_UNITDIR
-INSTALL_UNITDIR:=$(INSTALL_BASEDIR)/units/$(FULL_TARGET)
+INSTALL_UNITDIR:=$(INSTALL_BASEDIR)/units/$(TARGETSUFFIX)
 ifdef INSTALL_FPCPACKAGE
 ifdef PACKAGE_NAME
 INSTALL_UNITDIR:=$(INSTALL_UNITDIR)/$(PACKAGE_NAME)
@@ -654,9 +665,9 @@ ifdef CROSSCOMPILE
 # First check if they are available in FPCDIR. If no targets/ subdir
 # is found use the targets/ subdir in INSTALL_BASEDIR.
 ifndef CROSSBINDIR
-CROSSBINDIR:=$(wildcard $(CROSSTARGETDIR)/bin/$(FULL_SOURCE))
+CROSSBINDIR:=$(wildcard $(CROSSTARGETDIR)/bin/$(SOURCESUFFIX))
 ifeq ($(CROSSBINDIR),)
-CROSSBINDIR:=$(wildcard $(INSTALL_BASEDIR)/cross/$(FULL_TARGET)/bin/$(FULL_SOURCE))
+CROSSBINDIR:=$(wildcard $(INSTALL_BASEDIR)/cross/$(TARGETSUFFIX)/bin/$(FULL_SOURCE))
 endif
 endif
 else
@@ -1070,14 +1081,14 @@ ZIPCROSSPREFIX=
 ZIPSOURCESUFFIX=src
 ZIPEXAMPLESUFFIX=exm
 else
-FPCMADE=fpcmade.$(FULL_TARGET)
+FPCMADE=fpcmade.$(TARGETSUFFIX)
 ZIPSOURCESUFFIX=.source
 ZIPEXAMPLESUFFIX=.examples
 ifdef CROSSCOMPILE
-ZIPSUFFIX=.$(FULL_SOURCE)
-ZIPCROSSPREFIX=$(FULL_TARGET)-
+ZIPSUFFIX=.$(SOURCESUFFIX)
+ZIPCROSSPREFIX=$(TARGETSUFFIX)-
 else
-ZIPSUFFIX=.$(FULL_TARGET)
+ZIPSUFFIX=.$(TARGETSUFFIX)
 ZIPCROSSPREFIX=
 endif
 endif
@@ -1916,6 +1927,8 @@ fpc_baseinfo:
         @$(ECHO)  Target OS.... $(OS_TARGET)
         @$(ECHO)  Full Source.. $(FULL_SOURCE)
         @$(ECHO)  Full Target.. $(FULL_TARGET)
+        @$(ECHO)  SourceSuffix. $(SOURCESUFFIX)
+        @$(ECHO)  TargetSuffix. $(TARGETSUFFIX)
         @$(ECHO)
         @$(ECHO)  == Directory info ==
         @$(ECHO)
