--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -4,7 +4,7 @@
 
 [package]
 name=fpc
-version=1.9.7
+version=1.9.6
 
 [target]
 dirs=compiler rtl utils fcl fv packages ide installer
@@ -24,6 +24,11 @@ rule=help
 ifndef inOS2
 override FPCDIR:=$(BASEDIR)
 export FPCDIR
+endif
+
+# Build dir
+ifndef BUILDDIR
+BUILDDIR=$(BASEDIR)/build
 endif
 
 # New ppc386 (or ppc68k if on m68k machine !)
@@ -147,7 +152,7 @@ endif
 
 [rules]
 # These values can change
-unexport FPC_VERSION OS_SOURCE
+unexport FPC_VERSION FPC_COMPILERINFO OS_SOURCE
 
 # Only process directories that really exists
 override TARGET_DIRS:=$(wildcard $(TARGET_DIRS))
@@ -536,7 +541,7 @@ ifneq ($(wildcard $(CVSINSTALL)/debian/changelog),)
 
 DEBPACKAGEVERSION:=$(shell head -n 1 $(CVSINSTALL)/debian/changelog | awk '{ print $$2 }' | tr -d '[()]')
 DEBFPCVERSION:=$(shell echo $(DEBPACKAGEVERSION) | awk -F '-' '{ print $$1 }')
-DEBSRCDIR:=/usr/src/fpc-$(DEBFPCVERSION)
+DEBSRCDIR:=$(BUILDDIR)/fpc-$(DEBFPCVERSION)
 
 debcopy: distclean
         rm -rf $(DEBSRCDIR)
@@ -560,12 +565,22 @@ endif
         find $(DEBSRCDIR) -name 'CVS*' | xargs -n1 rm -rf
         chmod 755 $(DEBSRCDIR)/debian/rules
 
-deb: checkfpcdir debcopy
+debbuild:
 ifdef NODOCS
-        cd $(DEBSRCDIR) ; debian/rules binary-arch
+        cd $(DEBSRCDIR) ; fakeroot debian/rules binary-arch
 else
-        cd $(DEBSRCDIR) ; debian/rules binary
+        cd $(DEBSRCDIR) ; fakeroot debian/rules binary
 endif
+        mv $(DEBSRCDIR)/../*.deb .
+
+debclean:
+        rm -rf $(DEBSRCDIR)
+        -rmdir $(BUILDDIR)
+
+debtargz: checkfpcdir
+        $(MAKE) fpc_zipinstall USETAR=y ZIPTARGET=debcopy PACKDIR=$(DEBSRCDIR) FULLZIPNAME=fpc-$(DEBFPCVERSION).orig
+
+deb: checkfpcdir debcopy debbuild debclean
 
 endif   # changelog found
 
@@ -593,30 +608,26 @@ RPMBUILD=$(strip $(wildcard $(addsuffix /rpmbuild,$(SEARCHPATH))))
 ifeq ($(RPMBUILD),)
 RPMBUILD=$(strip $(wildcard $(addsuffix /rpm,$(SEARCHPATH))))
 endif
-REDHATDIR=$(shell rpm --eval=%_topdir)
-ifeq ($(REDHATDIR),%_topdir)
-REDHATDIR=
-endif
-ifeq ($(REDHATDIR),)
-REDHATDIR=/usr/src/redhat
-# Debian has /usr/src/rpm
-ifeq ($(wildcard $(REDHATDIR)),)
-REDHATDIR=/usr/src/rpm
-endif
-endif
-RPMSOURCESDIR:=$(REDHATDIR)/SOURCES
-RPMSPECDIR:=$(REDHATDIR)/SPECS
-RPMSRCDIR:=$(RPMSOURCESDIR)/fpc
+RPMDIR=$(BUILDDIR)/rpm
+RPMSPECFILE:=$(RPMDIR)/SPECS/fpc-$(RPMFPCVERSION).spec
+RPMSOURCEFILE:=$(RPMDIR)/SOURCES/fpc-$(RPMFPCVERSION)-src.tar.gz
+RPMSRCDIR:=$(RPMDIR)/SOURCES/fpc
 rpmcopy: distclean
         # false || is needed to workaround fpcmake sections
-        false || [ -d $(REDHATDIR) ] || install -d $(REDHATDIR)
-        false || [ -d $(RRPMSPECDIR) ] || install -d $(RPMSPECDIR)
-        false || [ -d $(RPMSOURCESDIR) ] || install -d $(RPMSOURCESDIR)
+        false || [ -d $(RPMDIR) ] || install -d $(RPMDIR)
+        false || [ -d $(RPMDIR)/BUILD ] || install -d $(RPMDIR)/BUILD
+        false || [ -d $(RPMDIR)/SOURCES ] || install -d $(RPMDIR)/SOURCES
+        false || [ -d $(RPMDIR)/SPECS ] || install -d $(RPMDIR)/SPECS
+        false || [ -d $(RPMDIR)/RPMS ] || install -d $(RPMDIR)/RPMS
+        false || [ -d $(RPMDIR)/SRPMS ] || install -d $(RPMDIR)/SRPMS
         rm -rf $(RPMSRCDIR)
-        cp $(CVSINSTALL)/fpc.spec $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
+        # Create fpc.spec, include our own builddir
+        echo "%define _topdir $(RPMDIR)" > $(RPMSPECFILE)
+        cat $(CVSINSTALL)/fpc.spec >> $(RPMSPECFILE)
 ifndef NODOCS
-        cat $(CVSINSTALL)/fpcdoc.spec >> $(RPMSPECDIR)/fpc-$(RPMFPCVERSION).spec
+        cat $(CVSINSTALL)/fpcdoc.spec >> $(RPMSPECFILE)
 endif
+        # Install files
         install -d $(RPMSRCDIR)
         $(COPYTREE) compiler $(RPMSRCDIR)
         $(COPYTREE) rtl $(RPMSRCDIR)
@@ -636,11 +647,19 @@ ifndef NODOCS
         $(COPYTREE) docs $(RPMSRCDIR)
 endif
         find $(RPMSRCDIR) -name 'CVS*' | xargs -n1 rm -rf
-        cd $(RPMSRCDIR) ; tar cvz * > $(RPMSOURCESDIR)/fpc-$(RPMFPCVERSION)-src.tar.gz
+        cd $(RPMSRCDIR) ; tar cfvz $(RPMSOURCEFILE) *
         rm -rf $(RPMSRCDIR)
 
-rpm: checkfpcdir rpmcopy
-        cd $(RPMSPECDIR) ; $(RPMBUILD) --nodeps -ba fpc-$(RPMFPCVERSION).spec
+rpmbuild: checkfpcdir
+        $(RPMBUILD) --nodeps -ba $(RPMSPECFILE)
+        mv `find $(RPMDIR)/RPMS/ -name '*.rpm'` .
+        mv `find $(RPMDIR)/SRPMS/ -name '*.rpm'` .
+
+rpmclean:
+        rm -rf $(RPMDIR)
+        -rmdir $(BUILDDIR)
+
+rpm: checkfpcdir rpmcopy rpmbuild rpmclean
 
 endif   # spec found
 
