* fix searching for fpc binary when specified on the cmdline

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -176,10 +176,14 @@ endif
 override FPC:=$(subst $(SRCEXEEXT),,$(FPC))
 override FPC:=$(subst \,/,$(FPC))$(SRCEXEEXT)
 
-# Try to find the binary, if not found give an error
+# Try to find the binary direct first, otherwise in the path,
+# if not found give an error
 FOUNDFPC:=$(strip $(wildcard $(FPC)))
 ifeq ($(FOUNDFPC),)
+FOUNDFPC=$(strip $(wildcard $(addsuffix /$(FPC),$(SEARCHPATH))))
+ifeq ($(FOUNDFPC),)
 $(error Compiler $(FPC) not found)
+endif
 endif
 
 # For 1.1 and up we can use a single compiler call to retrieve
