* Changes from Joost van der Sluis to enable dynamic loading of the Interbase library

--- a/packages/base/ibase/Makefile.fpc
+++ b/packages/base/ibase/Makefile.fpc
@@ -7,7 +7,7 @@ name=ibase
 version=1.9.7
 
 [target]
-units=ibase40 ibase60
+units=ibase40 ibase60 ibase60dyn
 examples=testib40 testib60
 
 [require]
