+ New structure for writers. Implemented TXT writer

--- a/utils/fpdoc/Makefile.fpc
+++ b/utils/fpdoc/Makefile.fpc
@@ -11,7 +11,7 @@ packages=fcl
 
 [target]
 programs=fpdoc makeskel unitdiff
-rst=dwriter fpdoc dglobals makeskel
+rst=dwriter fpdoc dglobals makeskel dwlinear
 # removed to reduce dependencies of rpm.
 #dirs_linux_i386=fpde
 #dirs_win32=fpde
@@ -26,11 +26,11 @@ fpcpackage=y
 fpcdir=../..
 
 [clean]
-units=dglobals dwriter dw_xml sh_pas dw_html dw_latex dw_ipf
+units=dglobals dwriter dw_xml sh_pas dw_html dw_latex dw_ipf dw_txt
 files=dwriter.rst fpdoc.rst dglobals.rst makeskel.rst
 
 [rules]
 fpdoc$(EXEEXT): fpdoc.pp dglobals.pp dwriter.pp dw_xml.pp sh_pas.pp dw_html.pp\
-  dw_latex.pp
+  dw_latex.pp dwlinear.pp dw_txt.pp
 
 makeskel$(EXEEXT): makeskel.pp dglobals.pp
