+ Dynamic library implementation by Joost van der Sluis

--- a/packages/base/postgres/Makefile.fpc
+++ b/packages/base/postgres/Makefile.fpc
@@ -7,7 +7,7 @@ name=postgres
 version=1.9.7
 
 [target]
-units=dllist postgres postgres3
+units=dllist dllistdyn postgres postgres3 postgres3dyn
 examples=testpg1 testpg2
 
 [require]
