--- a/packages/base/mysql/Makefile.fpc
+++ b/packages/base/mysql/Makefile.fpc
@@ -7,7 +7,7 @@ name=mysql
 version=1.9.7
 
 [target]
-units=mysql4_com mysql4_version mysql4 mysql3_com mysql3_version mysql3
+units=mysql4_com mysql4_version mysql4 mysql4dyn mysql4_comdyn mysql3_com mysql3_version mysql3
 examples=testdb4 testdb3
 
 [require]
