* gtk2 added to freebsd

--- a/packages/extra/Makefile.fpc
+++ b/packages/extra/Makefile.fpc
@@ -12,7 +12,7 @@ dirs_netbsd=unzip zlib \
             forms svgalib ggi libpng libgd \
             utmp bfd gdbm ncurses fpgtk tcl imlib gnome1
 dirs_freebsd=unzip zlib \
-             x11 opengl gtk syslog \
+             x11 opengl gtk gtk2 syslog \
              forms svgalib ggi libpng libgd \
              utmp bfd gdbm ncurses fpgtk tcl imlib gnome1
 dirs_openbsd=unzip zlib \
