--- a/packages/extra/Makefile.fpc
+++ b/packages/extra/Makefile.fpc
@@ -19,7 +19,7 @@ dirs_openbsd=unzip zlib \
              x11 opengl gtk syslog \
              forms svgalib ggi libpng libgd \
              utmp bfd gdbm ncurses fpgtk tcl imlib gnome1
-dirs_win32=unzip opengl gtk zlib mmsystem tcl cdrom fpgtk winver
+dirs_win32=unzip opengl gtk gtk2 zlib mmsystem tcl cdrom fpgtk winver
 dirs_os2=os2units \
          rexx \
          unzip zlib \
